현장등록DB서버연결및저장